パスの修正

--- a/src/pages/posts/latex-test/index.mdx
+++ b/src/pages/posts/latex-test/index.mdx
@@ -10,7 +10,7 @@ image:
     alt: 'Astroのロゴ。'
 tags: ["astro", "ブログ", "公開学習"]
 ---
-import Latex from "../../components/Latex.astro";
+import Latex from "../../../components/Latex.astro";
 
 ## 達成したこと
 
